--- a/client/src/styles/form.css
+++ b/client/src/styles/form.css
@@ -120,6 +120,14 @@
 .label{
     font-weight:500;
 }
+
+.group-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
 @media screen and (max-width: 800px){
     .grid-container {
         grid-template-columns: 100%
