--- a/client/src/styles/form.css
+++ b/client/src/styles/form.css
@@ -128,6 +128,10 @@
     margin-top: 10px;
 }
 
+.tag{
+    margin: 3px;
+}
+
 @media screen and (max-width: 800px){
     .grid-container {
         grid-template-columns: 100%
