--- a/client/src/styles/my-account.css
+++ b/client/src/styles/my-account.css
@@ -9,6 +9,11 @@
     width: 100%;
     height: 180px;
 }
+.banner{
+    width: 100%;
+}
+
+
 
 .background-image{
     width: 100%;
@@ -17,7 +22,10 @@
     border-top-right-radius: 50px;
     border-top-left-radius: 50px;
 }
-
+.background-image.cv{
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+}
 .introduce-bottom{
     height: 80px;
     width: 100%;
