--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+.spin-container{
+  width: 100%;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
