--- a/client/src/styles/card.css
+++ b/client/src/styles/card.css
@@ -216,6 +216,14 @@
   right: 1rem;
   font-size: 0.9em;
 }
+.card .general .hover{
+  position: absolute;
+  bottom: 1rem;
+  right: 5rem;
+  /* right: 1rem; */
+  /* font-size: 0.9em; */
+  opacity: 0.5;
+}
 /* 
 .red{
   color:#5c0800
