--- a/client/src/styles/statistic.css
+++ b/client/src/styles/statistic.css
@@ -60,3 +60,29 @@
     margin: 10px;
     padding: 10px;
 }
+
+.statistic-container-admin{
+    display: flex;
+    width: 800px;
+    text-align: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100vh;
+}
+
+.title-statistic{
+    text-align: center;
+    font-size: xx-large;
+    font-weight: 700;
+}
+.content-container{
+    /* padding: 50px; */
+    width: 500px;
+    height: 400px; 
+    margin-top: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+    background-color: white;
+    border-radius: 20px;
+}
