--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,16 @@
   pointer-events: none;
 }
 
+.content-app{
+  margin: 0 auto;
+  min-width: 600px;
+  max-width: 1250px;
+  min-height: calc(100vh - 200px)
+}
+.footer{
+  /* min-height: 100px; */
+  width: 100%;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
