--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,4 +1,4 @@
-.home{
+/* .home{
     display: flex;
     height: calc(100vh - 100px) ;
     width: 100%;
@@ -8,4 +8,4 @@
     text-transform: uppercase;
     font-weight: bold;
     font-size: large;
-}
+} */
