--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -9,3 +9,59 @@
     font-weight: bold;
     font-size: large;
 } */
+.title-home{
+    text-align: center;
+    font-size: 40px;
+    margin: 20px auto;
+}
+
+.section-home-container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin: 10px;
+    padding: 10px;
+}
+.right-block{
+    display: flex;
+    flex-direction:row-reverse;
+}
+
+.left-block{
+    display: flex;
+    flex-direction:row;
+}
+.image-home{
+    height: 300px;
+}
+
+.left{
+    text-align: left;
+}
+
+.right{
+    text-align: right;
+}
+
+.underline-home{
+    display: block;
+    width: 50px;
+    height: 5px;
+    background-color:orange;
+    margin-bottom: 30px;
+}
+
+.title-content{
+    font-size: x-large;
+    font-weight: 800;
+}
+.paragraph{
+    background-color: aliceblue;
+    height: 200px;
+    padding: 10px
+}
+
+.btn-home{
+    background-color: orange;
+    color: white;
+}
