--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 @import '~antd/dist/antd.css';
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script');
+
 
 html, body {
   /* background: #FCEEB5;
