--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -1,18 +1,8 @@
-/* .home{
-    display: flex;
-    height: calc(100vh - 100px) ;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    background-color: bisque;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: large;
-} */
 .title-home{
     text-align: center;
-    font-size: 40px;
+    font-size: 35px;
     margin: 20px auto;
+    font-family: Dancing Script;
 }
 
 .section-home-container{
