--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,13 @@
 @import '~antd/dist/antd.css';
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display');
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script');
-
+@import url('https://fonts.googleapis.com/css?family=Lexend');
 
 html, body {
   /* background: #FCEEB5;
    */
    background: rgba(255, 245, 245, 0.5);
-  font-family: Playfair Display, Arial, Verdana, sans-serif;
+  font-family: Lexend, Arial, Verdana, sans-serif;
 }
 /* body {
   margin: 0;
