--- a/client/src/styles/news.css
+++ b/client/src/styles/news.css
@@ -20,3 +20,11 @@
     padding: 10px;
     border-radius: 10px;
 }
+
+
+
+.news-detail-container{
+    display: block;
+    background-color: white;
+    border-radius: 5px;
+}
