--- a/client/src/styles/about.css
+++ b/client/src/styles/about.css
@@ -18,7 +18,7 @@
 
 .section{
     text-align: center;
-    margin: 50px;
+    margin-bottom: 50px;
 }
 
 .card-about-container{
@@ -26,7 +26,7 @@
     flex-wrap: nowrap;
     justify-content: center;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .card-about{
