--- a/client/src/styles/news.css
+++ b/client/src/styles/news.css
@@ -22,13 +22,13 @@
     margin: 20px 0px;
     padding-bottom: 50px;
     border-bottom: 1px solid gainsboro;
-
 }
 
 .title-news-section{
     font-size: x-large;
     color: orange;
     font-weight: 800;
+    text-align: left;
 }
 
 .underline-news{
