--- a/client/src/styles/statistic.css
+++ b/client/src/styles/statistic.css
@@ -64,8 +64,8 @@
 .statistic-container-admin{
     display: flex;
     width: 800px;
-    text-align: center;
-    justify-content: center;
+    /* text-align: center; */
+    justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
     height: 100vh;
@@ -77,12 +77,10 @@
     font-weight: 700;
 }
 .content-container{
-    /* padding: 50px; */
+    /* padding: 20px; */
     width: 500px;
     height: 400px; 
     margin-top: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
     background-color: white;
     border-radius: 20px;
 }
