--- a/client/src/styles/statistic.css
+++ b/client/src/styles/statistic.css
@@ -98,3 +98,8 @@
     font-size: xx-large;
     font-weight: 800;
 }
+
+.statistic_container{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
