--- a/client/src/styles/my-account.css
+++ b/client/src/styles/my-account.css
@@ -34,11 +34,20 @@
     text-align: left;
 }
 
-.avatar{
+.avatar-container{
     position: absolute;
     margin-top: -50px;
     margin-left: 30px;
+}
+
+.avatar{
     box-shadow: 0 0 0 3px white;
+}
+
+.edit-avatar{
+    position: absolute;
+    margin-top: 50px;
+    margin-left: 130px;
 }
 
 .introduce-fullname{
