--- a/client/src/styles/my-account.css
+++ b/client/src/styles/my-account.css
@@ -13,8 +13,6 @@
     width: 100%;
 }
 
-
-
 .background-image{
     width: 100%;
     height: 120px;
@@ -44,6 +42,7 @@
     box-shadow: 0 0 0 3px white;
 }
 
+
 .edit-avatar{
     position: absolute;
     margin-top: 50px;
@@ -56,6 +55,7 @@
     font-weight:600;
     position: absolute;
     margin-left: 160px ;
+    /* margin-top: -100px; */
 }
 
 .detail-swapper{
