--- a/client/src/styles/about.css
+++ b/client/src/styles/about.css
@@ -1,6 +1,6 @@
 .about{
     width: 100%;
-    height: calc(100vh - 200px);
+    min-height: calc(100vh - 200px);
     display: flex;
     justify-content: center;
     align-items: center;
