--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,9 @@
 html, body {
   /* background: #FCEEB5;
    */
-   background: rgba(255, 245, 245, 0.5);
+   max-width: 1200px;
+   margin: 0 auto;
+   /* background: rgba(255, 245, 245, 0.5); */
   font-family: Lexend, Arial, Verdana, sans-serif;
 }
 /* body {
@@ -19,6 +21,7 @@ html, body {
 } */
 
 code {
+  /* background: rgba(255, 245, 245, 0.5); */
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
