--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -4,11 +4,12 @@
     background-color: aliceblue;
     min-height: 100px;
     grid-template-columns: 50% 50%;
+    max-width: 1200px;
+    width: 100%;
 }
 .image-footer{
     display: flex;
     justify-content: center;
-
 }
 /* .image-footer img{
     height: 150px;
