--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -4,6 +4,8 @@
     background-color: rgb(0, 128, 0, 0.1);
     display: flex;
     align-items: center;
+    max-width: 1200px;
+    width: 100%;
     /* justify-content: flex-end; */
 }
 
