--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,11 +1,11 @@
 .nav {
-    width: 100%;
+    /* width: 100%; */
+    /* max-width: 1200px; */
     height: 50px;
-    background-color: rgb(0, 128, 0, 0.1);
+    background-color: rgba(0, 1, 63, 0.1);
     display: flex;
     align-items: center;
-    max-width: 1200px;
-    width: 100%;
+    /* width: 100%; */
     /* justify-content: flex-end; */
 }
 
