--- a/client/src/styles/statistic.css
+++ b/client/src/styles/statistic.css
@@ -99,10 +99,10 @@
     font-weight: 800;
 }
 
-.statistic_container{
+/* .statistic_container{
     display: grid;
     grid-template-columns: 50% 50%;
-}
+} */
 
 
 main{
