--- a/client/src/styles/nav.css
+++ b/client/src/styles/nav.css
@@ -1,6 +1,6 @@
 .nav {
-    /* width: 100%; */
-    /* max-width: 1200px; */
+    width: 100%;
+    max-width: 1600px;
     height: 50px;
     background-color: rgba(0, 1, 63, 0.1);
     display: flex;
