--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,9 +78,9 @@
   cursor: pointer;
 }
 
-.register-container{
+/* .register-container{
   background-image: url();
-}
+} */
 
 @keyframes App-logo-spin {
   from {
