--- a/client/src/styles/manager-page.css
+++ b/client/src/styles/manager-page.css
@@ -24,8 +24,6 @@
     min-width: 250px;
     width: 100%;
     margin: 0px 5px;
-    /* max-width: 350px; */
-    /* padding: 10px */
 }
 
 .label-filter{
@@ -59,9 +57,14 @@
 
 .search-input{
     max-width: 1600px;
-    /* width: 100%; */
 }
 
 .bold-column{
     font-weight:900
+}
+
+.ant-table-thead .ant-table-cell{
+    font-weight:700;
+    text-align: center;
+    width:fit-content;
 }
