--- a/client/src/styles/manager-page.css
+++ b/client/src/styles/manager-page.css
@@ -3,11 +3,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: large;
+    font-size: xx-large;
     font-weight: bold;
-    color: aliceblue;
+    color: black;
     text-transform: capitalize;
     background-image: linear-gradient(to bottom right, #eeaeca,#94bbe9);
+    position: relative;
 }
 
 .container-filter{
@@ -67,4 +68,31 @@
     font-weight:700;
     text-align: center;
     width:fit-content;
+}
+
+.text-banner{
+    font-size: xx-large;
+    font-weight: bold;
+    color: black;
+    text-transform: capitalize;
+}
+
+.image-background-banner{
+    /* background-position: left;
+    background-size: cover; */
+    /* background-image:url(https://i.ibb.co/X7Fw3P2/Grades-bro.png) */
+    position: absolute;
+    top: -100px;
+    width: 200px;
+    height: 200px;
+    left: 10px;
+    /* display: flex;
+    width: 100%;
+    align-items: flex-end; */
+}
+
+.banner-content .ant-image{
+    position: absolute;
+    right: 210px;
+
 }
