--- a/client/src/styles/statistic.css
+++ b/client/src/styles/statistic.css
@@ -66,7 +66,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     width: 100%;
-    height: 100vh;
+    max-height: 900px;
 }
 
 .title-statistic{
